--- a/fct.ipynb
+++ b/fct.ipynb
@@ -210,47 +210,67 @@
     "        V: (B, D, H, W)\n",
     "        \"\"\"\n",
     "        B, D, H, W = Q.shape\n",
-    "        Q = rearrange(Q, \"b d h w -> b (h w) d\")  # (B, HW, D)\n",
-    "        K = rearrange(K, \"b d h w -> b (h w) d\")  # (B, HW, D)\n",
-    "        V = rearrange(V, \"b d h w -> b (h w) d\")  # (B, HW, D)\n",
+    "        Q = rearrange(Q, \"b d h w -> b (h w) d\")  # (B, HW, Dq)\n",
+    "        K = rearrange(K, \"b d h w -> b (h w) d\")  # (B, HW, Dq)\n",
+    "        V = rearrange(V, \"b d h w -> b (h w) d\")  # (B, HW, Dv)\n",
     "\n",
-    "        Q = torch.nn.functional.softmax(Q, dim=-2)  # (B, HW, D)\n",
-    "        K = torch.nn.functional.softmax(K, dim=-1)  # (B, HW, D)\n",
+    "        Q = torch.nn.functional.softmax(Q, dim=-2)  # (B, HW, Dq)\n",
+    "        K = torch.nn.functional.softmax(K, dim=-1)  # (B, HW, Dq)\n",
     "\n",
     "        def break_into_heads(M):\n",
     "            return rearrange(\n",
     "                torch.cat(M.unsqueeze(0).chunk(self.num_heads, dim=-1), dim=0),\n",
     "                \"head b (h w) d -> (b head) (h w) d\",\n",
-    "                h=H, w=W, b=B, head=self.num_heads, d=D // self.num_heads,\n",
+    "                h=H,\n",
+    "                w=W,\n",
+    "                b=B,\n",
+    "                head=self.num_heads,\n",
+    "                d=D // self.num_heads,\n",
     "            )\n",
-    "        Q = break_into_heads(Q) # (B * num_heads, HW, D//num_heads)\n",
-    "        K = break_into_heads(K) # (B * num_heads, HW, D//num_heads)\n",
-    "        V = break_into_heads(V) # (B * num_heads, HW, D//num_heads)\n",
     "\n",
-    "        KV = torch.bmm(K.permute(0, 2, 1), V)  # (B * num_heads, D//num_heads, D//num_heads\n",
-    "        QKV = torch.bmm(Q, KV) # (B * num_heads, HW, D//num_heads)\n",
-    "        QKV = rearrange(QKV, \"(b head) (h w) d -> b (head d) h w\", h=H, w=W, b=B, head=self.num_heads, d=D // self.num_heads)  # (B, D, H, W)\n",
+    "        Q = break_into_heads(Q)  # (B * num_heads, HW, D//num_heads)\n",
+    "        K = break_into_heads(K)  # (B * num_heads, HW, D//num_heads)\n",
+    "        V = break_into_heads(V)  # (B * num_heads, HW, D//num_heads)\n",
+    "\n",
+    "        # K (B * num_heads, H, W, Dq//num_heads)\n",
+    "        # V (B * num_heads, H, W, Dv//num_heads)\n",
+    "        # KV (B * num_heads, Dq//num_heads, Dv//num_heads)\n",
+    "        # This should inner product of each channel of K and V\n",
+    "        # KV[b, i, j] = sum(K[b, :, :, i] (H, W) * V[b, :, :, j] (H, W))\n",
+    "\n",
+    "        KV = torch.bmm(K.permute(0, 2, 1), V)  # (B * num_heads, Dq//num_heads, Dv//num_heads)\n",
+    "\n",
+    "        # Q (B * num_heads, H, W, Dq//num_heads)\n",
+    "        # KV (B * num_heads, Dq//num_heads, Dv//num_heads)\n",
+    "        # functional conv2d\n",
+    "        # weight: KV[i, :, :].unsqueeze(-1).unsqueeze(-1)\n",
+    "        # input: Q.permute(0, 3, 1, 2)\n",
+    "\n",
+    "        QKV = torch.bmm(Q, KV)  # (B * num_heads, HW, Dv//num_heads)\n",
+    "        QKV = rearrange(\n",
+    "            QKV, \"(b head) (h w) d -> b (head d) h w\", h=H, w=W, b=B, head=self.num_heads, d=D // self.num_heads\n",
+    "        )  # (B, D, H, W)\n",
     "        QKV = self.head_unification(QKV)\n",
     "        return QKV\n",
     "\n",
-    "    def spatial_linear_self_attention(self, Q, K, V):\n",
-    "        \"\"\"\n",
-    "        Q: (B, D, H, W)\n",
-    "        K: (B, D, H, W)\n",
-    "        V: (B, D, H, W)\n",
-    "        \"\"\"\n",
-    "        B, D, H, W = Q.shape\n",
-    "        Q = rearrange(Q, \"b d h w -> b (h w) d\")  # (B, HW, D)\n",
-    "        K = rearrange(K, \"b d h w -> b (h w) d\")  # (B, HW, D)\n",
-    "        V = rearrange(V, \"b d h w -> b (h w) d\")  # (B, HW, D)\n",
+    "    # def spatial_linear_self_attention(self, Q, K, V):\n",
+    "    #     \"\"\"\n",
+    "    #     Q: (B, D, H, W)\n",
+    "    #     K: (B, D, H, W)\n",
+    "    #     V: (B, D, H, W)\n",
+    "    #     \"\"\"\n",
+    "    #     B, D, H, W = Q.shape\n",
+    "    #     Q = rearrange(Q, \"b d h w -> b (h w) d\")  # (B, HW, D)\n",
+    "    #     K = rearrange(K, \"b d h w -> b (h w) d\")  # (B, HW, D)\n",
+    "    #     V = rearrange(V, \"b d h w -> b (h w) d\")  # (B, HW, D)\n",
     "\n",
-    "        Q = torch.nn.functional.softmax(Q, dim=-2)  # (B, HW, D)\n",
-    "        K = torch.nn.functional.softmax(K, dim=-1)  # (B, HW, D)\n",
+    "    #     Q = torch.nn.functional.softmax(Q, dim=-2)  # (B, HW, D)\n",
+    "    #     K = torch.nn.functional.softmax(K, dim=-1)  # (B, HW, D)\n",
     "\n",
-    "        KV = K.transpose(-2, -1) @ V  # (B, HW, D)\n",
-    "        QKV = Q @ KV  # (B, HW, D)\n",
-    "        QKV = rearrange(QKV, \"b (h w) d -> b d h w\", h=H)  # (B, D, H, W)\n",
-    "        return QKV\n",
+    "    #     KV = K.transpose(-2, -1) @ V  # (B, HW, D)\n",
+    "    #     QKV = Q @ KV  # (B, HW, D)\n",
+    "    #     QKV = rearrange(QKV, \"b (h w) d -> b d h w\", h=H)  # (B, D, H, W)\n",
+    "    #     return QKV\n",
     "\n",
     "    def forward(self, x):\n",
     "        B, D, H, W = x.shape\n",
@@ -303,7 +323,7 @@
     "                      on the input encoding\n",
     "        \"\"\"\n",
     "        super().__init__()\n",
-    "\n",
+    "``\n",
     "        kernel_size = 3\n",
     "        self.input_layer_cnn = torch.nn.Sequential(\n",
     "            torch.nn.ZeroPad2d(same_padding(kernel_size)),\n",
@@ -322,7 +342,7 @@
     "    def forward(self, x):\n",
     "\n",
     "        # Apply depthwise separable convolution embedding\n",
-    "        x = self.input_layer_cnn(x)  # (128, 256, 32, 32)\n",
+    "        x = self.input_layer_cnn(x)  # (B, D, H, W)\n",
     "        B, D, H, W = x.shape\n",
     "\n",
     "        # Add positional embedding\n",
@@ -334,7 +354,7 @@
     "        x = self.transformer(x)\n",
     "\n",
     "        # Global Average Pooling\n",
-    "        pooled = x.reshape(B, D, -1).mean(dim=-1)  # (128, 256, 32, 32) -> (128, 256, 1024) -> (128, 256)\n",
+    "        pooled = x.reshape(B, D, -1).mean(dim=-1)  # (B, D, H, W) -> (B, D, HW) -> (B, D)\n",
     "\n",
     "        # Classification\n",
     "        out = self.classification_head(pooled)\n",
@@ -569,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.undefined"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
