--- a/vit.ipynb
+++ b/vit.ipynb
@@ -1507,6 +1507,7 @@
     "    trainer = L.Trainer(\n",
     "        default_root_dir=os.path.join(CHECKPOINT_PATH, \"ViT\"),\n",
     "        accelerator=\"auto\",\n",
+    "        precision=\"16-mixed\"\n",
     "        devices=1,\n",
     "        max_epochs=180,\n",
     "        callbacks=[\n",
