--- a/fct.ipynb
+++ b/fct.ipynb
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "batch_size = 256\n",
+    "batch_size = 64\n",
     "test_transform = torchvision.transforms.Compose(\n",
     "    [\n",
     "        torchvision.transforms.ToTensor(),\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
     "            stride = patch_width\n",
     "            internal_resolution = (input_resolution[0] // patch_width, input_resolution[1] // patch_width)\n",
     "        else:\n",
-    "            embedding_kernel_size = 3\n",
+    "            embedding_kernel_size = 1\n",
     "            stride = 1\n",
     "            internal_resolution = input_resolution\n",
     "        self.input_layer_cnn = torch.nn.Sequential(\n",
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,14 +526,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jun  6 21:48:25 2024       \n",
+      "Thu Jun  6 21:59:06 2024       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 550.54.14              Driver Version: 550.54.14      CUDA Version: 12.4     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -548,7 +548,7 @@
      "output_type": "stream",
      "text": [
       "|   0  NVIDIA GeForce RTX 3090        On  |   00000000:81:00.0 Off |                  N/A |\n",
-      "|  0%   26C    P8             23W /  350W |    3520MiB /  24576MiB |      0%      Default |\n",
+      "|  0%   30C    P8             22W /  350W |   20756MiB /  24576MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -561,128 +561,102 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using 16bit Automatic Mixed Precision (AMP)\n",
-      "GPU available: True (cuda), used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "Seed set to 42\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initializing model and trainer...\n",
-      "Checking for pretrained model...\n",
-      "No pretrained model found, training from scratch...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "\n",
-      "  | Name  | Type              | Params | In sizes         | Out sizes\n",
-      "---------------------------------------------------------------------------\n",
-      "0 | model | VisionTransformer | 4.4 M  | [256, 3, 32, 32] | [256, 10]\n",
-      "---------------------------------------------------------------------------\n",
-      "4.4 M     Trainable params\n",
-      "0         Non-trainable params\n",
-      "4.4 M     Total params\n",
-      "17.439    Total estimated model params size (MB)\n",
-      "/root/fct/utils.py:42: TracerWarning: Converting a tensor to a Python boolean might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
-      "  assert x.shape == expected_shape, f\"Expected shape {expected_shape} but got {x.shape}\"\n"
-     ]
-    },
-    {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea9fc1f39b8d46a382c1af91272e5123",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Sanity Checking: |          | 0/? [00:00<?, ?it/s]"
+       "[('', 10503696),\n",
+       " ('transformer', 10237440),\n",
+       " ('transformer.0', 1706240),\n",
+       " ('transformer.1', 1706240),\n",
+       " ('transformer.2', 1706240),\n",
+       " ('transformer.3', 1706240),\n",
+       " ('transformer.4', 1706240),\n",
+       " ('transformer.5', 1706240),\n",
+       " ('transformer.0.layer_norm_1', 524288),\n",
+       " ('transformer.0.layer_norm_2', 524288),\n",
+       " ('transformer.1.layer_norm_1', 524288),\n",
+       " ('transformer.1.layer_norm_2', 524288),\n",
+       " ('transformer.2.layer_norm_1', 524288),\n",
+       " ('transformer.2.layer_norm_2', 524288),\n",
+       " ('transformer.3.layer_norm_1', 524288),\n",
+       " ('transformer.3.layer_norm_2', 524288),\n",
+       " ('transformer.4.layer_norm_1', 524288),\n",
+       " ('transformer.4.layer_norm_2', 524288),\n",
+       " ('transformer.5.layer_norm_1', 524288),\n",
+       " ('transformer.5.layer_norm_2', 524288),\n",
+       " ('transformer.0.feed_forward', 262912),\n",
+       " ('transformer.1.feed_forward', 262912),\n",
+       " ('transformer.2.feed_forward', 262912),\n",
+       " ('transformer.3.feed_forward', 262912),\n",
+       " ('transformer.4.feed_forward', 262912),\n",
+       " ('transformer.5.feed_forward', 262912),\n",
+       " ('transformer.0.q_net', 131584),\n",
+       " ('transformer.0.k_net', 131584),\n",
+       " ('transformer.0.feed_forward.0', 131584),\n",
+       " ('transformer.1.q_net', 131584),\n",
+       " ('transformer.1.k_net', 131584),\n",
+       " ('transformer.1.feed_forward.0', 131584),\n",
+       " ('transformer.2.q_net', 131584),\n",
+       " ('transformer.2.k_net', 131584),\n",
+       " ('transformer.2.feed_forward.0', 131584),\n",
+       " ('transformer.3.q_net', 131584),\n",
+       " ('transformer.3.k_net', 131584),\n",
+       " ('transformer.3.feed_forward.0', 131584),\n",
+       " ('transformer.4.q_net', 131584),\n",
+       " ('transformer.4.k_net', 131584),\n",
+       " ('transformer.4.feed_forward.0', 131584),\n",
+       " ('transformer.5.q_net', 131584),\n",
+       " ('transformer.5.k_net', 131584),\n",
+       " ('transformer.5.feed_forward.0', 131584),\n",
+       " ('transformer.0.feed_forward.3', 131328),\n",
+       " ('transformer.1.feed_forward.3', 131328),\n",
+       " ('transformer.2.feed_forward.3', 131328),\n",
+       " ('transformer.3.feed_forward.3', 131328),\n",
+       " ('transformer.4.feed_forward.3', 131328),\n",
+       " ('transformer.5.feed_forward.3', 131328),\n",
+       " ('transformer.0.v_net', 65792),\n",
+       " ('transformer.0.head_unification', 65792),\n",
+       " ('transformer.1.v_net', 65792),\n",
+       " ('transformer.1.head_unification', 65792),\n",
+       " ('transformer.2.v_net', 65792),\n",
+       " ('transformer.2.head_unification', 65792),\n",
+       " ('transformer.3.v_net', 65792),\n",
+       " ('transformer.3.head_unification', 65792),\n",
+       " ('transformer.4.v_net', 65792),\n",
+       " ('transformer.4.head_unification', 65792),\n",
+       " ('transformer.5.v_net', 65792),\n",
+       " ('transformer.5.head_unification', 65792),\n",
+       " ('classification_head', 3082),\n",
+       " ('classification_head.1', 2570),\n",
+       " ('input_layer_cnn', 1030),\n",
+       " ('input_layer_cnn.2', 1024),\n",
+       " ('classification_head.0', 512),\n",
+       " ('input_layer_cnn.1', 6),\n",
+       " ('input_layer_cnn.0', 0),\n",
+       " ('input_layer_cnn.3', 0),\n",
+       " ('transformer.0.feed_forward.1', 0),\n",
+       " ('transformer.0.feed_forward.2', 0),\n",
+       " ('transformer.0.feed_forward.4', 0),\n",
+       " ('transformer.1.feed_forward.1', 0),\n",
+       " ('transformer.1.feed_forward.2', 0),\n",
+       " ('transformer.1.feed_forward.4', 0),\n",
+       " ('transformer.2.feed_forward.1', 0),\n",
+       " ('transformer.2.feed_forward.2', 0),\n",
+       " ('transformer.2.feed_forward.4', 0),\n",
+       " ('transformer.3.feed_forward.1', 0),\n",
+       " ('transformer.3.feed_forward.2', 0),\n",
+       " ('transformer.3.feed_forward.4', 0),\n",
+       " ('transformer.4.feed_forward.1', 0),\n",
+       " ('transformer.4.feed_forward.2', 0),\n",
+       " ('transformer.4.feed_forward.4', 0),\n",
+       " ('transformer.5.feed_forward.1', 0),\n",
+       " ('transformer.5.feed_forward.2', 0),\n",
+       " ('transformer.5.feed_forward.4', 0),\n",
+       " ('dropout', 0)]"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2a7b4496c08412a910d422303361ea3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08a085e93dad4c2391c687a16b534382",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`Trainer.fit` stopped: `max_epochs=1` reached.\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e046006fe3c4a12a8618c887be64b44",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Testing: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fbd47e9ccd74996a4fd5107a8cdcb79",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Testing: |          | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -700,15 +674,19 @@
     "    \"num_channels\": 3,\n",
     "    \"num_classes\": 10,\n",
     "    \"dropout\": 0.2,\n",
+    "    \"patch_equivalent_mode\": True,\n",
+    "    \"patch_width\": 1,\n",
+    "    \"input_resolution\": (32, 32),\n",
+    "    \"transformer_kernel_size\": 1,\n",
     "}\n",
     "\n",
-    "# counts = []\n",
-    "# for name, module in VisionTransformer(**model_kwargs).named_modules():\n",
-    "#     num_params = sum(p.numel() for p in module.parameters())\n",
-    "#     counts.append((name, num_params))\n",
-    "# sorted(counts, key=lambda x: x[1], reverse=True)\n",
+    "counts = []\n",
+    "for name, module in VisionTransformer(**model_kwargs).named_modules():\n",
+    "    num_params = sum(p.numel() for p in module.parameters())\n",
+    "    counts.append((name, num_params))\n",
+    "sorted(counts, key=lambda x: x[1], reverse=True)\n",
     "\n",
-    "model, results = train_model(model_kwargs=model_kwargs, lr=3e-4)\n",
+    "# %lprun -f TransformerBlock.spatial_linear_self_attention model, results = train_model(model_kwargs=model_kwargs, lr=3e-4)\n",
     "\n",
     "# vit = VisionTransformer(**model_kwargs).to(device)\n",
     "# optimizer = torch.optim.AdamW(vit.parameters(), lr=3e-4)\n",
